# theo-manager

./: .gitignore  AndroidManifest.xml  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.css  update_css.js
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: main.css  manifest.json  site.webmanifest  sw.js  tailwind.css
assets/i18n/: en-US.ftl  es-ES.ftl
icons/: icon.icns
src/: crypto.rs  database.rs  i18n.rs  main.rs
src/components/: menu.rs  mod.rs  navigation_header.rs  responsive_modal.rs  sidebar.rs  stepper.rs  theme_preview.rs
src/components/onboarding/: congregation_step.rs  mod.rs  mode_selection_step.rs  user_creation_step.rs  welcome_step.rs
src/database/: db.rs
src/database/models/: absence.rs  congregation.rs  field_service_group.rs  field_service_meeting.rs  field_service_report.rs  meeting_attendance.rs  mod.rs  preaching_group.rs  privilege.rs  role.rs  special_event.rs  user.rs  user_settings.rs
src/models/: absence.rs  congregation.rs  emergency_contact.rs  event.rs  field_service_group.rs  field_service_meeting.rs  field_service_report.rs  migrate.rs  mod.rs  privilege.rs  territory.rs  user.rs  user_prefs.rs
src/pages/: landing.rs  mod.rs  not_found.rs
src/pages/app/: absences.rs  attendants.rs  av_platform.rs  cleaning.rs  congregation_permissions.rs  congregation_settings.rs  custom.rs  dashboard.rs  events.rs  field_service_groups.rs  field_service_meetings.rs  field_service_reports.rs  maintenance.rs  mod.rs  new_congregation.rs  privileges.rs  public_preaching.rs  public_talks.rs  territory.rs  user.rs  user_detail.rs  user_settings.rs  weekday_meeting.rs  weekend_meeting.rs
src/views/: congregation_settings.rs  field_service_groups.rs  field_service_reports.rs  home.rs  landing.rs  mod.rs  publisher_reports.rs  user_settings.rs  users.rs
src/views/categories/: congregation.rs  meetings.rs  mod.rs  publishers.rs  settings.rs
