[package]
name = "theo-manager"
version = "0.0.0-git"
authors = ["MarckFp <33698618+MarckFp@users.noreply.github.com>"]
edition = "2024"
publish = false

[dependencies]
bcrypt = "0.17.0"
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.1", features = [] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.72"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
surrealdb = { version = "2.3.10", features = [] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"], optional = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Window", "Location", "Document", "Element", "HtmlAnchorElement", "Blob", "Url"] }

[features]
default = ["web"]
web = ["dioxus/web", "surrealdb/kv-indxdb", "surrealdb/protocol-ws"]
desktop = ["dioxus/desktop", "surrealdb/kv-rocksdb", "surrealdb/protocol-ws"]
mobile = ["dioxus/mobile", "surrealdb/kv-rocksdb", "surrealdb/protocol-ws"]
bundle = []

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
